@@ -16,3 +16,5 @@ Release notes for Version 1.24 (Sept 2015 -- )
 - improved DUMP, added DUMP c$,#n, also PLIST #n
 - fixed Crash (SIGABRT) in Android version.
 - fixed Crashhandler (Android)
+- fixed bug in RADIX() and fixed bug in arbint/arbfloat evaluation
+- fixed bug in FILL and ELLIPSE/PELLIPSE (for big screens)
